--- a/TSAR/packages.config
+++ b/TSAR/packages.config
@@ -38,7 +38,9 @@
   <package id="Newtonsoft.Json" version="10.0.2" targetFramework="net452" />
   <package id="Owin" version="1.0" targetFramework="net452" />
   <package id="Respond" version="1.4.2" targetFramework="net452" />
+  <package id="Sendgrid" version="9.5.0" targetFramework="net452" />
   <package id="System.IdentityModel.Tokens.Jwt" version="5.1.3" targetFramework="net452" />
+  <package id="System.Net.Http" version="4.0.0" targetFramework="net452" />
   <package id="Twilio" version="5.4.1" targetFramework="net452" />
   <package id="WebGrease" version="1.6.0" targetFramework="net452" />
 </packages>
