Added Timesheet Signature

--- a/TSAR/TSAR.csproj
+++ b/TSAR/TSAR.csproj
@@ -213,7 +213,6 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Api\MobileTimesheetsController.cs" />
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\IdentityConfig.cs" />
@@ -772,6 +771,7 @@
     <Content Include="Views\Timesheets\Success.cshtml" />
   </ItemGroup>
   <ItemGroup>
+    <Folder Include="Api\" />
     <Folder Include="App_Data\" />
     <Folder Include="Content\images\" />
     <Folder Include="Content\themes\base\images\" />
