--- a/MobileTsar/MobileTsar.Droid/packages.config
+++ b/MobileTsar/MobileTsar.Droid/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="Plugin.CurrentActivity" version="1.0.1" targetFramework="monoandroid70" />
   <package id="Plugin.Fingerprint" version="1.4.5" targetFramework="monoandroid70" />
+  <package id="SignaturePad.Xamarin.Forms.PCL" version="1.0.0.1" targetFramework="monoandroid71" />
   <package id="Xam.Plugins.Settings" version="3.0.1" targetFramework="monoandroid70" />
   <package id="Xamarin.Android.Support.Animated.Vector.Drawable" version="25.3.1" targetFramework="monoandroid70" />
   <package id="Xamarin.Android.Support.Annotations" version="25.3.1" targetFramework="monoandroid70" />
@@ -20,5 +21,7 @@
   <package id="Xamarin.Android.Support.v7.RecyclerView" version="25.3.1" targetFramework="monoandroid70" />
   <package id="Xamarin.Android.Support.Vector.Drawable" version="25.3.1" targetFramework="monoandroid70" />
   <package id="Xamarin.Build.Download" version="0.4.6" targetFramework="monoandroid70" />
+  <package id="Xamarin.Controls.SignaturePad" version="2.1.1" targetFramework="monoandroid71" />
+  <package id="Xamarin.Controls.SignaturePad.Forms" version="2.1.1" targetFramework="monoandroid71" />
   <package id="Xamarin.Forms" version="2.3.4.247" targetFramework="monoandroid70" />
 </packages>
