--- a/TSAR/packages.config
+++ b/TSAR/packages.config
@@ -10,7 +10,7 @@
   <package id="jQuery" version="3.1.1" targetFramework="net452" />
   <package id="jQuery.Validation" version="1.16.0" targetFramework="net452" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.2.1" targetFramework="net452" />
-  <package id="Microsoft.AspNet.Identity.EntityFramework" version="1.0.0" targetFramework="net452" />
+  <package id="Microsoft.AspNet.Identity.EntityFramework" version="2.2.1" targetFramework="net452" />
   <package id="Microsoft.AspNet.Identity.Owin" version="2.2.1" targetFramework="net452" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net452" />
@@ -49,7 +49,8 @@
   <package id="System.IdentityModel.Tokens.Jwt" version="5.1.4" targetFramework="net452" />
   <package id="System.Net.Http" version="4.3.2" targetFramework="net452" />
   <package id="System.Spatial" version="5.8.2" targetFramework="net452" />
-  <package id="T4Scaffolding" version="0.8.0" targetFramework="net452" />
+  <package id="T4Scaffolding" version="1.0.8" targetFramework="net452" />
+  <package id="T4Scaffolding.Core" version="0.0.1" targetFramework="net452" />
   <package id="Twilio" version="5.6.2" targetFramework="net452" />
   <package id="WebGrease" version="1.6.0" targetFramework="net452" />
 </packages>
