--- a/MobileTsar/MobileTsar/MobileTsar.csproj
+++ b/MobileTsar/MobileTsar/MobileTsar.csproj
@@ -64,6 +64,9 @@
     <Compile Include="Views\RegisterPage.xaml.cs">
       <DependentUpon>RegisterPage.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Views\TimesheetListViewPage.xaml.cs">
+      <DependentUpon>TimesheetListViewPage.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Views\TimesheetSign.xaml.cs">
       <DependentUpon>TimesheetSign.xaml</DependentUpon>
     </Compile>
@@ -168,6 +171,12 @@
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Views\TimesheetSign.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Views\TimesheetListViewPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
       <SubType>Designer</SubType>
     </EmbeddedResource>
