--- a/MobileTsar/MobileTsar.Droid/Properties/AndroidManifest.xml
+++ b/MobileTsar/MobileTsar.Droid/Properties/AndroidManifest.xml
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:installLocation="auto">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:installLocation="preferExternal">
 	<uses-sdk android:minSdkVersion="15" />
 	<uses-permission android:name="android.permission.USE_FINGERPRINT" />
-	<application android:label="MobileTsar.Droid" android:icon="@drawable/icon"></application>
+	<application android:label="TSAR Mobile"></application>
 </manifest>
