Added code for barcode scanning

--- a/MobileTsar/MobileTsar.Windows/packages.config
+++ b/MobileTsar/MobileTsar.Windows/packages.config
@@ -7,4 +7,6 @@
   <package id="SignaturePad.Xamarin.Forms.PCL" version="1.0.0.1" targetFramework="win81" />
   <package id="Xam.Plugins.Settings" version="3.0.1" targetFramework="win81" />
   <package id="Xamarin.Forms" version="2.3.4.270" targetFramework="win81" />
+  <package id="ZXing.Net.Mobile" version="2.2.9" targetFramework="win81" />
+  <package id="ZXing.Net.Mobile.Forms" version="2.2.9" targetFramework="win81" />
 </packages>
