--- a/MobileTsar/MobileTsar.Droid/packages.config
+++ b/MobileTsar/MobileTsar.Droid/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="EntityFramework" version="6.1.3" targetFramework="monoandroid71" />
+  <package id="FastAndroidCamera" version="2.0.0" targetFramework="monoandroid71" />
   <package id="Microsoft.Bcl" version="1.1.10" targetFramework="monoandroid71" />
   <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="monoandroid71" />
   <package id="Microsoft.CSharp" version="4.4.0" targetFramework="monoandroid71" />
@@ -79,4 +80,6 @@
   <package id="Xamarin.Controls.SignaturePad" version="2.1.1" targetFramework="monoandroid71" />
   <package id="Xamarin.Controls.SignaturePad.Forms" version="2.1.1" targetFramework="monoandroid71" />
   <package id="Xamarin.Forms" version="2.3.4.270" targetFramework="monoandroid71" />
+  <package id="ZXing.Net.Mobile" version="2.2.9" targetFramework="monoandroid71" />
+  <package id="ZXing.Net.Mobile.Forms" version="2.2.9" targetFramework="monoandroid71" />
 </packages>
