--- a/MobileTsar/MobileTsar/packages.config
+++ b/MobileTsar/MobileTsar/packages.config
@@ -9,4 +9,6 @@
   <package id="Xam.Plugins.Settings" version="3.0.1" targetFramework="portable45-net45+win8+wp8+wpa81" />
   <package id="Xamarin.Controls.SignaturePad.Forms" version="2.1.1" targetFramework="portable45-net45+win8+wp8+wpa81" />
   <package id="Xamarin.Forms" version="2.3.4.270" targetFramework="portable45-net45+win8+wp8+wpa81" />
+  <package id="ZXing.Net.Mobile" version="2.2.9" targetFramework="portable45-net45+win8+wp8+wpa81" />
+  <package id="ZXing.Net.Mobile.Forms" version="2.2.9" targetFramework="portable45-net45+win8+wp8+wpa81" />
 </packages>
