Client password vault

--- a/MobileTsar/MobileTsar.WinPhone/packages.config
+++ b/MobileTsar/MobileTsar.WinPhone/packages.config
@@ -7,6 +7,7 @@
   <package id="SignaturePad.Xamarin.Forms.PCL" version="1.0.0.1" targetFramework="wpa81" />
   <package id="Xam.Plugins.Settings" version="3.0.1" targetFramework="wpa81" />
   <package id="Xamarin.Forms" version="2.3.4.270" targetFramework="wpa81" />
+  <package id="Xamarin.Forms.Maps" version="2.3.4.270" targetFramework="wpa81" />
   <package id="ZXing.Net.Mobile" version="2.2.9" targetFramework="wpa81" />
   <package id="ZXing.Net.Mobile.Forms" version="2.2.9" targetFramework="wpa81" />
 </packages>
