--- a/MobileTsar/MobileTsar.WinPhone/packages.config
+++ b/MobileTsar/MobileTsar.WinPhone/packages.config
@@ -5,6 +5,8 @@
   <package id="Microsoft.Net.Http" version="2.2.29" targetFramework="wpa81" />
   <package id="Plugin.Fingerprint" version="1.4.5" targetFramework="wpa81" />
   <package id="SignaturePad.Xamarin.Forms.PCL" version="1.0.0.1" targetFramework="wpa81" />
+  <package id="Xam.Plugin.Geolocator" version="4.0.1" targetFramework="wpa81" />
   <package id="Xam.Plugins.Settings" version="3.0.1" targetFramework="wpa81" />
   <package id="Xamarin.Forms" version="2.3.4.270" targetFramework="wpa81" />
+  <package id="Xamarin.Forms.Maps" version="2.3.4.270" targetFramework="wpa81" />
 </packages>
