--- a/MobileTsar/MobileTsar.Droid/Properties/AndroidManifest.xml
+++ b/MobileTsar/MobileTsar.Droid/Properties/AndroidManifest.xml
@@ -2,5 +2,18 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" android:installLocation="preferExternal">
 	<uses-sdk android:minSdkVersion="15" />
 	<uses-permission android:name="android.permission.USE_FINGERPRINT" />
-	<application android:label="TSAR Mobile"></application>
+	<uses-permission android:name="android.permission.ACCESS_CHECKIN_PROPERTIES" />
+	<uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+	<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+	<uses-permission android:name="android.permission.ACCESS_LOCATION_EXTRA_COMMANDS" />
+	<uses-permission android:name="android.permission.ACCESS_MOCK_LOCATION" />
+	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+	<uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+	<uses-permission android:name="android.permission.INSTALL_LOCATION_PROVIDER" />
+	<uses-permission android:name="android.permission.INTERNET" />
+	<uses-permission android:name="android.permission.LOCATION_HARDWARE" />
+	<application android:label="TSAR Mobile">
+		<!--put api key here-->
+		<meta-data android:name="com.google.android.maps.v2.API_KEY" android:value="AIzaSyBkUImwbiagE1yIAF-VULHR_PHE--7zwLM" />
+	</application>
 </manifest>
